@@ -1,10 +1,10 @@
 Elvio Basello (HelLViS69)                                       Mon Nov 17 2008
 ###############################################################################
-General notes for the installation of the 4.0 release of KVIrc
+General notes for the installation of the 4.0.1 release of KVIrc
 ###############################################################################
 
     This document contains the procedures to compile and install
-    the version 4.0 of KVIrc.
+    the version 4.0.1 of KVIrc.
 
 ###############################################################################
 # 0. Table of contents
@@ -25,7 +25,7 @@ General notes for the installation of the 4.0 release of KVIrc
 ###############################################################################
 
     This document contains the procedures to compile and install
-    the version 4.0 of KVIrc.
+    the version 4.0.1 of KVIrc.
 
     If you have found this document in a binary distribution then
     KVIrc has been probably already installed by your favorite package
@@ -41,9 +41,9 @@ General notes for the installation of the 4.0 release of KVIrc
 # 2. Minimal requirements:
 ###############################################################################
 
-    In order to compile KVIrc 4.0 you need at least these software:
-    - Qt GUI Toolkit 4.5 - http://www.qtsoftware.com
-    - CMake 2.6 - http://www.cmake.org
+    In order to compile KVIrc 4.0.1 you need at least these software:
+    - Qt GUI Toolkit 4.5 or newer - http://www.qtsoftware.com
+    - CMake 2.6 or newer - http://www.cmake.org
     - C++ compiler, such as g++ - http://gcc.gnu.org (btw: we'd be glad if any-
         one could find the time to test KVIrc with ICC!)
     - Pthread implementation
