@@ -1,3 +1,25 @@
+xx.07.2010: Release 4.0.1 "Insomnia"
+###############################################################################
+
+Here we go again: 4.0.1 is out!
+
+4.0.1 is mainly a bugfix release. 4.0.0 was the first public release
+after long time and even if we have tested it for a very long time
+some bugs didn't miss to jump out. 4.0.1 contains the fixes for these
+problems.
+
+The bugs for this release should be reported by using the bugtrack system available
+at https://svn.kvirc.de/kvirc/
+
+Have fun :)
+Szymon Stefanek and The KVIrc Development Team
+
+
+
+
+
+
+
 27.06.2010: Release 4.0.0 "Insomnia"
 ###############################################################################
 
