@@ -1,6 +1,9 @@
 Update TODO file, if something is implemented, it should be removed in the TODO file.
 Mantain TODO file as clear as possible
 
+Please note that this TODO file is currently unused/unmantained.
+The list of user-asked feature request is available at: https://svn.kvirc.de/kvirc/report/2
+
 - Events, events, events. There are lots of them pending (see TODO.Events).
 - /timer as a module
 - It would be cool if KVIrc could to delete old log files automatically
