@@ -2,6 +2,10 @@ This is KVIrc's changelog. It tipically lists new added features and changes tha
 kvirc's previous behaviour. For a more detailed (and up to date) log, point your browser at:
   https://svn.kvirc.de/kvirc/timeline
 
+Jul 2010
+   [KVIrc dev team]
+   - Fixes for some major bugs reported on trac
+
 Jun 2010
    [Pragma]
    - Fixes for some bugs reported on trac
